<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="28dp"
        android:text="@string/esto_es_una_flor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAstronauta"
        android:layout_width="170dp"
        android:layout_height="132dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:contentDescription="TODO"
        android:onClick="onClickAstronauta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFlor"
        app:srcCompat="@drawable/astro" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="181dp"
        android:layout_height="77dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="112dp"
        android:text="@string/esto_es_un_astronauta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageAstronauta"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageFlor"
        android:layout_width="171dp"
        android:layout_height="127dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/todo"
        android:onClick="onClickImagenFlor"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="156dp"
        android:text="@string/esto_es_un_saludo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="133dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:onClick="onClickSaludo"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageAstronauta"
        app:srcCompat="@drawable/manos" />
</androidx.constraintlayout.widget.ConstraintLayout>